<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_settings">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/label_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_surname" />

    <EditText
        android:id="@+id/surname_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/label_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_index" />

    <EditText
        android:id="@+id/index_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="6" />

    <TextView
        android:id="@+id/label_subject_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_subject_value" />

    <EditText
        android:id="@+id/subject_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />
</LinearLayout>